--- a/.github/workflows/push_to_wiki.yml
+++ b/.github/workflows/push_to_wiki.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Run create_sidebar.py script
+        run: python3 create_sidebar.py
+
       - name: Set up SSH
         env:
           PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
@@ -40,25 +43,8 @@ jobs:
           git config user.email $USER_EMAIL
           git pull git@github.com:$OWNER/$REPOSITORY_NAME.wiki.git
 
-      - name: Prepare files and sidebar
-        run: |
-          python3 -c """
-import os
-def create_sidebar(parent, sidebar, level=0):
-    for item in sorted(os.listdir(parent)):
-        path = os.path.join(parent, item)
-        if os.path.isdir(path):
-            if level == 0:
-                sidebar.write(f'▪ {item.upper()}\n\n')
-            else:
-                sidebar.write(f'{level * " "} - {item}\n\n')
-            create_sidebar(path, sidebar, level + 1)
-        elif item.endswith('.md') and item != '_Sidebar.md':
-            sidebar.write(f'{level * " "} - [{item[:-3]}]({parent.replace("wiki/", "")}/{item})\n')
-parent = 'wiki'
-with open(os.path.join(parent, '_Sidebar.md'), 'w') as sidebar:
-    create_sidebar(parent, sidebar)
-"""
+      - name: Synchronize content to wiki
+        run: rsync -av --delete wiki/ tmp_wiki/ --exclude .git
 
       - name: Push content to wiki
         run: |
